force-app/main/default/objects/Issue__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Assignee</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Issues</relationshipLabel>
    <relationshipName>AssignedIssues</relationshipName>
</CustomField>