force-app/main/default/objects/Issue__c/fields/Parent_Epic__c.field-meta.xml
<CustomField>
    <fullName>Parent_Epic__c</fullName>
    <label>Parent Epic</label>
    <type>Lookup</type>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Sub-Issues</relationshipLabel>
    <relationshipName>SubIssues</relationshipName>
</CustomField>