force-app/main/default/objects/Issue__c/fields/Spent_Hours__c.field-meta.xml
<CustomField>
    <fullName>Spent_Hours__c</fullName>
    <label>Spent Hours</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>