force-app/main/default/objects/Issue__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>Sprint Issues</relationshipLabel>
    <relationshipName>SprintIssues</relationshipName>
    <type>Lookup</type>
</CustomField>