force-app/main/default/objects/Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>To Do</fullName><default>false</default></value>
            <value><fullName>In Progress</fullName><default>false</default></value>
            <value><fullName>Code Review</fullName><default>false</default></value>
            <value><fullName>QA</fullName><default>false</default></value>
            <value><fullName>Done</fullName><default>false</default></value>
        </valueSetDefinition>
        <valueSetType>Defined</valueSetType>
    </valueSet>
</CustomField>