force-app/main/default/objects/Issue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Task</fullName><default>false</default></value>
            <value><fullName>Bug</fullName><default>false</default></value>
            <value><fullName>Story</fullName><default>false</default></value>
            <value><fullName>Epic</fullName><default>false</default></value>
        </valueSetDefinition>
        <valueSetType>Defined</valueSetType>
    </valueSet>
</CustomField>